# LudicoMovie

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LANGUAGES.md  README.md
backend/include/: ipc.h  translation_engine.h  whisper_engine.h
backend/src/: ipc.c  main.c  translation_engine.cpp  whisper_engine.c
frontend/: package-lock.json
frontend/src/: main.js  overlay.html  renderer.js
scripts/: build.sh  setup.sh  setup_t5_translation.sh  setup_win.bat
